added route to get businesses a member is a part of
