# backend/src/routes/members.js
@@ -1,6 +1,7 @@
 const memberDb = require('../db/memberDb');
 const userDb = require('../db/userDb');
 const eventsDb = require('../db/eventsDb');
+const businessDb = require('../db/businessDb');
 const dotenv = require('dotenv');
 dotenv.config();
 
@@ -70,22 +71,38 @@ exports.getMembers = async (req, res) => {
   res.status(200).json(memberList);
 }
 
+// Returns businesses that a member is a part of
+exports.getMemberBusinesses = async (req, res) => {
+  const businesses = await memberDb.getMemberBusinesses(req.params.useremail);
+
+  // get businesses based on businessid
+  let businessList = []
+  for (i = 0; i < businesses.length; i++) {
+    const business = await businessDb.selectBusiness(businesses[i].businessid);
+    const businessData = {
+      businessid: business.businessid,
+      businessname: business.businessname,
+      email: business.businessemail,
+      phonenumber: business.phonenumber,
+      description: business.description,
+    };
+    console.log(businessData);
+    businessList.push(businessData);
+  }
+  res.status(200).json(businessList);
+}
+
 // Returns events for all businesses a user is a part of
 exports.getRestrictedEvents = async (req, res) => {
-  console.log('hi');
-  console.log('email: '+req.params.useremail);
   const businesses = await memberDb.getMemberBusinesses(req.params.useremail);
-  console.log(businesses);
   let restrictedEventList = []
   for (i = 0; i < businesses.length; i++) {
     // get events for the business
     const restrictedEvents = await eventsDb.getBusinessEvents(businesses[i].businessid);
     for (j = 0; j < restrictedEvents.length; j++) {
       // push each event
-      console.log(restrictedEvents[j]);
       restrictedEventList.push(restrictedEvents[j]);
     }
   }
-  console.log(restrictedEventList);
   res.status(200).json(restrictedEventList);
 }
